# template

./: .gitignore  Cargo.toml  README.md  index.html  manifest.json  template-15a3cda6a1874420.js
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  main.rs
